# async-video-downloader

./: .gitignore  Dockerfile  README.md  alembic.ini  database.py  db_crud.py  db_tables.py  docker-compose.yml  envpy.py  log_conf.py  main.py  pyproject.toml  requirements.txt  schemas.py  service.py
.github/workflows/: ci.yml
alembic/: env.py
app/: database.py  db_crud.py  db_tables.py  envpy.py  log_conf.py  main.py  schemas.py  service.py
app/static/: index.html
downloads/: 104.webm  71.webm
monitoring/: prometheus.yml
tests/: test_main.py  test_service.py
