[project]
name = "async-vid"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "aiosqlite>=0.21.0",
    "asyncpg~=0.30.0",
    "yt-dlp>=2026.7.4",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
